@@ -14,10 +14,10 @@ import com.adityachandel.booklore.repository.LibraryRepository;
 import com.adityachandel.booklore.service.NotificationService;
 import com.adityachandel.booklore.service.metadata.BookMetadataUpdater;
 import com.adityachandel.booklore.service.metadata.extractor.MetadataExtractorFactory;
-import com.adityachandel.booklore.task.RescanLibraryContext;
+import com.adityachandel.booklore.task.options.RescanLibraryContext;
 import com.adityachandel.booklore.task.TaskCancellationManager;
 import com.adityachandel.booklore.task.TaskStatus;
-import com.adityachandel.booklore.task.tasks.options.LibraryRescanOptions;
+import com.adityachandel.booklore.task.options.LibraryRescanOptions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -62,7 +62,7 @@ class LibraryRescanHelperTest {
 
         LibraryRescanOptions options = LibraryRescanOptions.builder()
                 .metadataReplaceMode(MetadataReplaceMode.REPLACE_ALL)
-                .build();
+                .updateMetadataFromFiles(true).build();
 
         rescanContext = RescanLibraryContext.builder()
                 .libraryId(1L)
@@ -226,9 +226,9 @@ class LibraryRescanHelperTest {
 
         List<TaskProgressPayload> payloads = payloadCaptor.getAllValues();
         assertEquals(3, payloads.size());
-        assertEquals(0, payloads.get(0).getProgress());
+        assertEquals(0, payloads.getFirst().getProgress());
         assertEquals(TaskStatus.IN_PROGRESS, payloads.get(0).getTaskStatus());
-        assertEquals(TaskType.RE_SCAN_LIBRARY, payloads.get(0).getTaskType());
+        assertEquals(TaskType.REFRESH_LIBRARY_METADATA, payloads.get(0).getTaskType());
         assertEquals(TaskStatus.IN_PROGRESS, payloads.get(1).getTaskStatus());
         assertEquals(100, payloads.get(2).getProgress());
         assertEquals(TaskStatus.COMPLETED, payloads.get(2).getTaskStatus());
